--- a/src/editProjectForm.form
+++ b/src/editProjectForm.form
@@ -94,7 +94,7 @@
                                   </Group>
                               </Group>
                               <Component id="jScrollPane2" alignment="1" min="-2" pref="173" max="-2" attributes="0"/>
-                              <Component id="jButton1" alignment="1" min="-2" pref="173" max="-2" attributes="0"/>
+                              <Component id="removeButton" alignment="1" min="-2" pref="173" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace pref="58" max="32767" attributes="0"/>
@@ -136,7 +136,7 @@
                           <Group type="102" attributes="0">
                               <Component id="jScrollPane2" min="-2" pref="140" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jButton1" min="-2" pref="35" max="-2" attributes="0"/>
+                              <Component id="removeButton" min="-2" pref="35" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane1" min="-2" pref="204" max="-2" attributes="0"/>
                       </Group>
@@ -343,7 +343,7 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="removeButton">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial" size="18" style="0"/>
@@ -351,7 +351,7 @@
         <Property name="text" type="java.lang.String" value="Remove Student"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="femaleButton">
